# onthemoney

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  LICENSE  Makefile  README.md
services/agent/: Dockerfile  fly.toml  pyproject.toml
services/agent/otm_agent/: __init__.py  agent.py  answer.py  config.py  demo_guard.py  districts.json  geo.py  graph.py  http.py  mcp_server.py  registry.py  response.py  runtime.py  scene.py  tools.py
services/agent/tests/: conftest.py  test_agent_loop.py  test_agent_tools.py  test_answer.py  test_config.py  test_demo_guard.py  test_geo.py  test_graph.py  test_http.py  test_mcp_server.py  test_registry.py  test_response.py  test_runtime.py  test_scene.py  test_tools.py
services/data/: README.md  docker-compose.yml  pyproject.toml
services/data/otm_data/: __init__.py  bulk.py  bulk_ingest.py  db.py  fetch_slice.py  ingest.py  load.py  oracle.py  parse.py  schema.sql
services/data/tests/: conftest.py  test_bulk.py  test_fetch_slice.py  test_ingest.py  test_load.py  test_oracle.py  test_parse.py  test_schema.py
services/eval/: pyproject.toml
services/eval/otm_eval/: __init__.py  build_golden.py  build_recorded.py  build_scoreboard.py  coverage.py  gate_thresholds.py  golden.py  graders.py  live.py  regenerate.py  regression_demo.py  run_live.py  runner.py  scoreboard.py  system.py
services/eval/tests/: conftest.py  test_build_golden.py  test_build_recorded.py  test_calibration.py  test_coverage.py  test_gate.py  test_golden.py  test_graders.py  test_live.py  test_regression_demo.py  test_run_live.py  test_runner.py  (+2 more)
(+513 files in other folders)
