[project]
name = "otm-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "otm-data",
    "otm-agent",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
otm-data = { path = "../data", editable = true }
otm-agent = { path = "../agent", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
